[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/radioButtonIcon.gd" type="Script" id=1]
[ext_resource path="res://interface/new_buttongroup.tres" type="ButtonGroup" id=2]
[ext_resource path="res://interface/icon.gd" type="Script" id=3]

[node name="Control" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.594597
margin_top = -1.18921
margin_right = -0.594604
margin_bottom = -1.18921
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 512.0
margin_bottom = 14.0
text = "Icon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 512.0
margin_bottom = 126.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HBoxContainer"]
margin_bottom = 108.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 10.0
margin_right = 512.0
margin_bottom = 108.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Default" type="CheckBox" parent="HBoxContainer/VBoxContainer"]
margin_right = 502.0
margin_bottom = 24.0
pressed = true
group = ExtResource( 2 )
text = "Default"

[node name="None" type="CheckBox" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 502.0
margin_bottom = 52.0
group = ExtResource( 2 )
text = "None"

[node name="Option" type="CheckBox" parent="HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 502.0
margin_bottom = 80.0
group = ExtResource( 2 )
text = "Option"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 502.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 44.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.5, 0.5, 0.5, 1 )
text = "    Path"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 470.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 474.0
margin_right = 498.0
margin_bottom = 24.0
disabled = true
text = "..."

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 502.0
margin_right = 502.0
margin_bottom = 24.0

[node name="FileDialog" type="FileDialog" parent="HBoxContainer/VBoxContainer/HBoxContainer/Control"]
margin_right = 363.0
margin_bottom = 277.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.ico ; Icon File" )
current_dir = "/Godot/py to exe"
current_path = "/Godot/py to exe/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Default" to="HBoxContainer/VBoxContainer" method="_on_Default_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/None" to="HBoxContainer/VBoxContainer" method="_on_None_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Option" to="HBoxContainer/VBoxContainer" method="_on_Option_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button" to="HBoxContainer/VBoxContainer" method="_on_Button_pressed"]
[connection signal="file_selected" from="HBoxContainer/VBoxContainer/HBoxContainer/Control/FileDialog" to="HBoxContainer/VBoxContainer" method="_on_FileDialog_file_selected"]
